# rEmotion

./: .gitignore  .gitmodules  LICENSE  README.md  rEmotion.code-workspace
.github/: FUNDING.yml
assets/: README.md
docs/: api.md  architecture.md
firmware/: platformio.ini  rEmorion-software.code-workspace
firmware-micropython/: faces.py  lcd12864.py  main.py  stepper.py
firmware/include/: display.h  pinout.h
firmware/lib/arduino_i2c_with_regs/: I2cWithRegs.cpp  I2cWithRegs.h  LICENSE  README.md  VirtualRegs.cpp  VirtualRegs.h  keywords.txt  library.properties
firmware/lib/arduino_i2c_with_regs/examples/slave_device/: slave_device.ino
firmware/src/: common_config.h  controlcallback.cpp  controlcallback.h  display.cpp  display.h  main.cpp  pinout.h  printf.cpp  serial.cpp  serial.h  stepper.cpp  stepper.hpp
remotion_control/: CMakeLists.txt  README.md  meson.build  remorion_control.code-workspace
remotion_control/example/: meson.build
remotion_control/example/src/: app.cpp
remotion_control/include/: Remotion.hpp  RemotionController.hpp
remotion_control/src/: RemotionCamera.cpp  RemotionContoller.cpp  Remotion_CameraImpl.cpp
schematic/: current_connection.fzz  rEmorion_components.kicad_sym  rEmotion.kicad_prl  rEmotion.kicad_pro  rEmotion.kicad_sch  sym-lib-table
software/: .clang-format  CMakeLists.txt  README.md  ab.cmake  platformio.ini  rEmorion-software.code-workspace
software/example/: CMakeLists.txt
software/example/src/: app.cpp
software/include/: Remotion.hpp  RemotionError.hpp  RemotionExpression.hpp  RemotionStatus.hpp  common_config.h  controlcallback.h  display.h  i2c.h  pinout.h  printf.h  serial.h
software/src/: AppVisioner.cpp  AppVisioner.hpp  Remotion.cpp  Remotion_CameraImpl.cpp  Remotion_CommonImpl.cpp  Remotion_FaceImpl.cpp  controlcallback.cpp  display.cpp  i2c.cpp  main.cpp  printf.cpp  serial.cpp
software/src_tmp/: FaceRemotion.cpp  FaceRemotion.hpp
software/tests/manual/: CMakeLists.txt  main.cpp
software/tests/test_basic/: CMakeLists.txt
sw/arduino_implementation/zk_mm/: platformio.ini
sw/arduino_implementation/zk_mm/src/: main.cpp  zk_calm.xbm  zk_calm_inv.xcf
